tests/invalid_typecheck/test_no_declarations.aphi
/*
Demonstrates: A valid program with no variable declarations at all.
Only contains a single empty main procedure.
*/

procedure main {
}
